[workspace]
members = [".", "game_plugin"]

[package]
name = "bug_bite"
version = "0.1.0"
publish = false
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default",
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native",
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "game_plugin/dev",
    "native",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_webgl2 = { version = "0.5.0", optional = true }
game_plugin = { path = "game_plugin" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "bevy_main" }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }

# We would do a patch here like:
#
#   [patch.'https://github.com/bevyengine/bevy']
#   bevy = { git = "https://github.com//bevyengine/bevy" }
#   bevy_reflect = { git = "https://github.com//bevyengine/bevy" }
#
# except for https://github.com/rust-lang/cargo/issues/5478,
# So .cargo/config.toml does a path override instead. Probably could also
# do a fork or something instead...

[build-dependencies]
embed-resource = "1.4"
